# PythonAssignment

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 183006fffc13_.py  ae041b991ae4_.py  e2d90fa5f8c5_initial_migration.py
inventory/: api.py  app.py  database.py  events.py  models.py
order/: Dockerfile  api.py  app.py  database.py  events.py  models.py
