[project]
name = "python-backend-assignment"
version = "1.0.0"
description = "Python project assignment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "fastapi[standard]>=0.115.11",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
]
